# epsilon

./: Cargo.toml  README.md  package-lock.json  package.json  patch-electron-forge-vscode-nix.sh
app/: package-lock.json  package.json
engine/: Cargo.toml
engine/src/: fen.rs  lib.rs  main.rs
engine/src/board/: bitboard.rs  bitboards.rs  board.rs  board_state.rs  castling_rights.rs  error_messages.rs  mod.rs  piece.rs  player.rs  square.rs  square_color.rs
engine/src/common/: algebraic_coord.rs  constants.rs  coord.rs  fen_symbol.rs  math.rs  mod.rs
engine/src/fen/: parser.rs
engine/src/models/: board.rs  fen.rs  mod.rs  piece.rs  player.rs
engine/src/moves/: error_messages.rs  mod.rs  move_generator.rs  mover.rs  piece_move.rs
engine/src/piece/: mod.rs  piece.rs  piece_code.rs  piece_color.rs  piece_kind.rs
engine/src/position/: analyzer.rs
engine/src/render/: bitboard.rs  board.rs  mod.rs  piece.rs
epsilon/: Cargo.toml
epsilon/src/: lib.rs  main.rs
epsilon/src/bitboard/: bitboard.rs  direction.rs  masks.rs  mod.rs
epsilon/src/board/: algebraic_coord.rs  bitboard.rs  board.rs  castling_rights.rs  mod.rs  piece.rs  square.rs  state.rs
epsilon/src/fen/: constants.rs  mod.rs  parser.rs
epsilon/src/moves/: mod.rs  move_generator.rs  move_tables.rs  mover.rs  piece_move.rs
epsilon/src/position/: analyzer.rs
epsilon/src/render/: bitboard.rs  board.rs  mod.rs  piece.rs
gui/: .eslintrc.json  package-lock.json  package.json  tsconfig.json  webpack.main.config.js  webpack.renderer.config.js
src/: Game.ts  index.html  renderer.ts
(+127 files in other folders)
